додає фон хедеру і герою

--- a/src/partials/neader-hero.html
+++ b/src/partials/neader-hero.html
@@ -90,19 +90,31 @@
                     </div>
                 </div>
 
+                <!--<picture class="ice-cream">
+                    <source srcset="././images/hero/icecream_mob.png 1x, ././images/hero/icecream_mob@2x.png 2x" media="(max-width: 767px)"/>
+                    <source srcset="././images/hero/icecream_tablet.png 1x, ././images/hero/icecream_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                    <source srcset="././images/hero/icecream_desktop.png 1x, ././images/hero/icecream_desktop@2x.png 2x" media="(min-width: 1200px)"/>
+                    <img src="././images/hero/icecream_tablet.png" alt="girl eating ice-cream"/>
+                </picture>-->
                 
-                
-                <!-- ТОЧКИ ПРОДАЖУ -->
-                <div class="sales-points">
-                    <div class="points caffee">
-                        <p class="points-number">16</p>
-                        <p class="points-title">cafes</p>                        
+               <div class="r-block">
+                        <!-- ТОЧКИ ПРОДАЖУ -->
+                    <div class="sales-points">
+                        <div class="points caffee">
+                            <p class="points-number">16</p>
+                            <p class="points-title">cafes</p>                        
+                        </div>
+                        <div class="points tracks">
+                            <p class="points-number">23</p>
+                            <p class="points-title">food trucks</p>                        
+                        </div>
                     </div>
-                    <div class="points tracks">
-                        <p class="points-number">23</p>
-                        <p class="points-title">food trucks</p>                        
-                    </div>
-                </div>
+                    <picture class="girl">
+                        <source srcset="././images/hero/girl_tablet.png 1x, ././images/hero/girl_tablet@2x.png 2x" media="(max-width: 1199px)"/>
+                        <source srcset="././images/hero/girl_desktop.png 1x, ././images/hero/girl_desktop@2x.png 2x" media="(min-width: 1200px)"/>
+                        <img src="././images/hero/girl_tablet.png" alt="girl eating ice-cream"/>
+                    </picture>
+               </div>
                 
                
                 
