--- a/src/sass/layout/_hero.scss
+++ b/src/sass/layout/_hero.scss
@@ -3,33 +3,35 @@
 
     justify-content: space-between;
 
-    padding-top: 12px;
+    padding-top: 9px;
 
     @media screen  and (min-width:768px){
         padding-left: 19px;
-        padding-right: 10px;
+        padding-right: 8px;
     }
 
 
     @media screen  and (min-width:1200px){
         padding-top: 3px;
-       
         padding-right: 0px;
+        padding-left: 57px;
     }
 
 }
 
 
 .title-block {
-    margin-top: 137px;
-
+    @media screen  and (max-width: 767px){
+        margin-top: 137px;
+    }
+    
     @media screen  and (min-width:768px) and (max-width: 1199px){
-       margin-top: 3px;
+        padding-top: 3px;
     }
 
     @media screen  and (min-width:1200px){
-        margin-top: 84px;
-        padding-left: 95px;
+        padding-top: 84px;
+        padding-left: 38px;
     }
 }
 
@@ -142,10 +144,11 @@
 .milk {
     display: block;
     width: 120px;
-    height: 100%;
+    height: 124px;
 
     @media screen  and (min-width:1200px){
        width: 188px;
+       height: 191px;
     }
     
 }
@@ -155,10 +158,12 @@
     @media screen  and (min-width:768px){
         display: flex;  
         flex-direction: column;
-        padding-top: 47px;     
+        padding-top: 47px;
+        padding-bottom: 6px;     
     }
     @media screen  and (min-width:1200px){
         padding-top: 55px;
+        padding-bottom: 11px;   
     }
    
 }
@@ -220,27 +225,31 @@
     @media screen  and (min-width:1200px){
         width: 13px;
     }
-
-
 }
+.r-block {
+    display: none;
+    @media screen  and (min-width:768px){
+        display: block;
+    }
 
+    @media screen  and (min-width:1200px){
+        padding-top: 63px;
+    }
+    
+}
 .sales-points {
     display: none;
 
     @media screen  and (min-width:768px){
         display: flex;
         flex-direction: column;
-        justify-content: end;
+        align-items: flex-end;
 
-        
-
-
+        margin-bottom: 64px; 
     }
     @media screen  and (min-width:1200px){
-        margin-top: 78px;
-        
-        
- 
+               
+        margin-bottom: 90px; 
     }
 }
 
@@ -349,5 +358,16 @@
 
     @media screen  and (min-width:1200px){
         margin-bottom: 30px;
+    }
+}
+
+.girl {
+    display: block;
+    width: 168px;
+    height: 133px;
+
+    @media screen  and (min-width:1200px){
+        width: 293px;
+        height: 232px;
     }
 }
