--- a/src/sass/layout/_menu.scss
+++ b/src/sass/layout/_menu.scss
@@ -1,24 +1,103 @@
 .head-container {
     position: relative;
+    padding-top: 6px;
 
     padding-left: 20px;
 
+
     height: 502px;
 
+    background-image: url('./../images/hero/icecream_mob.png'), url('./../images/hero/ellipse_mob.png');
+    background-repeat: no-repeat;
+    background-position: left 117px bottom 0px, top 92px right 0px;
+    
+    @media screen and (min-device-pixel-ratio: 2),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
+            background-image: url('./../images/hero/icecream_mob@2x.png'), url('./../images/hero/ellipse_mob@2x.png');
+    }
+    
     background-color: $accent-color;
-    @media screen  and (min-width:768px){
+
+    @media screen  and (min-width:768px) and (max-width:1199px) {
         padding-top: 37px;
+        padding-right: 34px;
 
         height: 399px;
+
+        background-image: url('./../images/hero/icecream_tablet.png'), url('./../images/hero/ellipse_tablet.png');
+        background-repeat: no-repeat;
+        background-position: top 63px right 247px, top 30px right 140px;
+        
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url('./../images/hero/icecream_tablet@2x.png'), url('./../images/hero/ellipse_tablet@2x.png');
+        }
     }
 
     @media screen  and (min-width:1200px){
+        padding-top: 37px;
         height: 665px;
 
         padding-right: 115px;
+
+        background-image: url('./../images/hero/icecream_desktop.png'), url('./../images/hero/ellipse_desktop.png');
+        background-repeat: no-repeat;
+        background-position: top 108px right 450px, top 55px right 267px;
+        
+        @media screen and (min-device-pixel-ratio: 2),
+            screen and (min-resolution: 192dpi),
+            screen and (min-resolution: 2dppx) {
+                background-image: url('./../images/hero/icecream_desktop@2x.png'), url('./../images/hero/ellipse_desktop@2x.png');
+        }
     }
 }
 
+
+
+.nav {
+    
+    margin-left: auto;
+    margin-right: auto;
+    
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 56px;
+
+    @media screen  and (min-width:768px){
+        padding-right: 19px;
+        padding-left: 19px;
+    }
+    @media screen  and (min-width:768px){
+       padding-right: 0px;
+        
+    }
+
+
+    
+}
+
+.logo_icon {
+    fill: $title-text-color; 
+    
+    width: 199px;
+    height: 50px;
+}
+.menu-btn {
+    background-color: transparent;
+    border: none;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @media screen  and (min-width:1200px){
+        display: none;
+    }
+}
 .btn-container {
     display: flex;
 }
@@ -78,49 +157,6 @@
 .right-icon {
     width: 5.26px;
     height: 9px;
-}
-
-.nav {
-    padding-top: 6px;
-    margin-left: auto;
-    margin-right: auto;
-    
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    height: 56px;
-
-    @media screen  and (min-width:768px){
-        padding-right: 19px;
-        padding-left: 19px;
-    }
-    @media screen  and (min-width:768px){
-        padding-right: 0px;
-        
-    }
-
-
-    
-}
-
-.logo_icon {
-    fill: $title-text-color; 
-    
-    width: 199px;
-    height: 50px;
-}
-.menu-btn {
-    background-color: transparent;
-    border: none;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    @media screen  and (min-width:1200px){
-        display: none;
-    }
 }
 
 .close-btn {
