--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -208,7 +208,16 @@ img {
   position: relative;
   padding-left: 20px;
   height: 502px;
+  background-image: url("./../images/hero/icecream_mob.png");
+  background-repeat: no-repeat;
+  background-position: left 117px bottom 0px;
   background-color: #FFB8CA;
+}
+
+@media screen and (min-device-pixel-ratio: 2), screen and (-webkit-min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx) {
+  .head-container {
+    background-image: url("./../images/hero/icecream_mob@2x.png");
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -458,7 +467,7 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding-top: 12px;
+  padding-top: 9px;
 }
 
 @media screen and (min-width: 768px) {
@@ -471,24 +480,27 @@ img {
 @media screen and (min-width: 1200px) {
   .hero {
     padding-top: 3px;
-    padding-left: 95px;
     padding-right: 0px;
+    padding-left: 57px;
   }
 }
 
-.title-block {
-  margin-top: 137px;
+@media screen and (max-width: 767px) {
+  .title-block {
+    margin-top: 137px;
+  }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .title-block {
-    margin-top: 3px;
+    padding-top: 3px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .title-block {
-    margin-top: 84px;
+    padding-top: 84px;
+    padding-left: 38px;
   }
 }
 
@@ -595,6 +607,43 @@ img {
   }
 }
 
+.bio {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .bio {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-top: 19px;
+    height: 126px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .bio {
+    margin-top: 56px;
+    height: 191px;
+  }
+}
+
+.milk {
+  display: block;
+  width: 120px;
+  height: 124px;
+}
+
+@media screen and (min-width: 1200px) {
+  .milk {
+    width: 188px;
+    height: 191px;
+  }
+}
+
 .bio-eco {
   display: none;
 }
@@ -608,13 +657,15 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    margin-top: 19px;
+    padding-top: 47px;
+    padding-bottom: 6px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .bio-eco {
-    margin-top: 54px;
+    padding-top: 55px;
+    padding-bottom: 11px;
   }
 }
 
@@ -643,7 +694,6 @@ img {
   width: 120px;
   padding: 0;
   margin: 0;
-  margin-top: 45px;
   margin-bottom: 7px;
   font-family: DM Sans;
   font-weight: 400;
@@ -654,6 +704,7 @@ img {
 
 @media screen and (min-width: 1200px) {
   .bio-eco-descr {
+    margin-top: 0;
     margin-bottom: 20px;
     width: 200px;
     font-size: 14px;
@@ -672,6 +723,22 @@ img {
   }
 }
 
+.r-block {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .r-block {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .r-block {
+    padding-top: 63px;
+  }
+}
+
 .sales-points {
   display: none;
 }
@@ -685,15 +752,16 @@ img {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: end;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    margin-bottom: 64px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .sales-points {
-    margin-top: 78px;
+    margin-bottom: 90px;
   }
 }
 
@@ -784,6 +852,19 @@ img {
 @media screen and (min-width: 1200px) {
   .caffee {
     margin-bottom: 30px;
+  }
+}
+
+.girl {
+  display: block;
+  width: 168px;
+  height: 133px;
+}
+
+@media screen and (min-width: 1200px) {
+  .girl {
+    width: 293px;
+    height: 232px;
   }
 }
 /*# sourceMappingURL=main.css.map */
