--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -126,10 +126,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  @media screen and (min-width: 1280px) {
-    margin-left: -46px;
-  }
   width: 100%;
 }
 
@@ -321,6 +317,10 @@
     display: none;
   }
 
+  @media screen and (min-width: 1280px) {
+    margin-right: 50px;
+  }
+
   cursor: pointer;
   &:hover,
   &:focus {
@@ -360,7 +360,6 @@
       align-items: center;
       margin-top: 56px;
       position: absolute;
-      left: 30px;
     }
   }
 
@@ -375,7 +374,7 @@
     z-index: 5;
 
     @media screen and (min-width: 1280px) {
-      margin-top: 84px;
+      margin-top: 69px;
     }
   }
 
@@ -396,13 +395,14 @@
     @media screen and (min-width: 768px) {
       font-size: 34px;
       line-height: 0.905;
+      width: 162px;
     }
 
     @media screen and (min-width: 1280px) {
       font-size: 58px;
       line-height: 0.905;
       width: 277px;
-      margin-left: -30px;
+      margin-left: 23px;
     }
   }
 
@@ -449,10 +449,10 @@
       font-size: 14px;
       line-height: 1.23;
       padding: 8px 20px;
+      margin-left: 23px;
 
       &-accent {
         margin-right: 15px;
-        margin-left: -30px;
       }
     }
   }
