--- a/src/partials/composition.html
+++ b/src/partials/composition.html
@@ -22,6 +22,7 @@
                 <p class="composition-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</p>
             </li>
         </ul>
+
         <picture class="gallery-image">
             <source srcset="./images/desktop_photogallery_1x.jpg 1x, ./images/desktop_photogallery_2x.jpg 2x, ./images/desktop_photogallery_3x.jpg 3x" media="(min-width: 1280px)">
             <source srcset="./images/tablet_photogallery_1x.jpg 1x, ./images/tablet_photogallery_2x.jpg 2x, ./images/tablet_photogallery_3x.jpg 3x" media="(min-width: 740px)">
@@ -30,5 +31,5 @@
         </picture>
 
     </div>
-
+    <div class="composition-gap"></div>
 </section>
