social-icons - mobile

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -15,7 +15,7 @@
             rel="noopener noreferer"
             aria-label="Github"
           >
-            <svg class="social-icons-svg">
+            <svg class="social-icons-svg gh-svg">
               <use href="./images/vector/icon-sprite.svg#icon-github1"></use>
             </svg>
           </a>
@@ -28,7 +28,7 @@
             rel="noopener noreferer"
             aria-label="Telegram"
           >
-            <svg class="social-icons-svg">
+            <svg class="social-icons-svg tlgr-svg">
               <use href="images/vector/icon-sprite.svg#icon-telegram1"></use>
             </svg>
           </a>
@@ -41,7 +41,7 @@
             rel="noopener noreferer"
             aria-label="Facebook"
           >
-            <svg class="social-icons-svg">
+            <svg class="social-icons-svg fb-svg">
               <use href="images/vector/icon-sprite.svg#icon-facebook1"></use>
             </svg>
           </a>
