добавляет геометрию и стили(нужна доработка)

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,9 +1,11 @@
-<section>
-  <div>
-    <h2><span>100% natural</span>products</h2>
-    <ul>
-      <li>
-        <picture>
+<section class="product-section">
+  <div class="container products-container">
+    <h2 class="product-section-title">
+      <span class="natural-text">100% natural</span>products
+    </h2>
+    <ul class="product-list">
+      <li class="product-item">
+        <picture class="products-image">
           <source
             srcset="
               ./images/products/img1.png    1x,
@@ -25,17 +27,26 @@
             "
             media="(min-width: 320px)"
           />
-          <img src="./images/products/img1.png" alt="пес" />
+          <img src="./images/products/img1.png" alt="ice cream" />
         </picture>
-        <h3>ice cream</h3>
-        <p>
+        <h3 class="products-item-title">ice cream</h3>
+        <div class="dots">
+          <svg class="dots-icon">
+            <use href="./images/products/icons.svg#dots"></use>
+          </svg>
+        </div>
+        <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <a href="" target="blank" rel="noopener noreferer"></a>
+        <a href="" class="products-link" target="blank" rel="noopener noreferer"
+          ><svg class="arrow-icon">
+            <use href="./images/products/icons.svg#arrow-right"></use>
+          </svg>
+        </a>
       </li>
-      <li>
-        <picture>
+      <li class="product-item">
+        <picture class="products-image">
           <source
             srcset="
               ./images/products/img2.png    1x,
@@ -57,17 +68,26 @@
             "
             media="(min-width: 320px)"
           />
-          <img src="./images/products/img2.png" alt="пес" />
+          <img src="./images/products/img2.png" alt="ice coffee" />
         </picture>
-        <h3>ice coffee</h3>
-        <p>
+        <h3 class="products-item-title">ice coffee</h3>
+        <div class="dots">
+          <svg class="dots-icon">
+            <use href="./images/products/icons.svg#dots"></use>
+          </svg>
+        </div>
+        <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <a href="" target="blank" rel="noopener noreferer"></a>
+        <a href="" class="products-link" target="blank" rel="noopener noreferer"
+          ><svg class="arrow-icon">
+            <use href="./images/products/icons.svg#arrow-right"></use>
+          </svg>
+        </a>
       </li>
-      <li>
-        <picture>
+      <li class="product-item">
+        <picture class="products-image">
           <source
             srcset="
               ./images/products/img3.png    1x,
@@ -89,14 +109,23 @@
             "
             media="(min-width: 320px)"
           />
-          <img src="./images/products/img3.png" alt="пес" />
+          <img src="./images/products/img3.png" alt="milkshakes" />
         </picture>
-        <h3>milkshakes</h3>
-        <p>
+        <h3 class="products-item-title">milkshakes</h3>
+        <div class="dots">
+          <svg class="dots-icon">
+            <use href="./images/products/icons.svg#dots"></use>
+          </svg>
+        </div>
+        <p class="products-item-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
+          eiusmod tempor incididunt ut labore et. dolore magna aliqua facilisis.
         </p>
-        <a href="" target="blank" rel="noopener noreferer"></a>
+        <a href="" class="products-link" target="blank" rel="noopener noreferer"
+          ><svg class="arrow-icon">
+            <use href="./images/products/icons.svg#arrow-right"></use>
+          </svg>
+        </a>
       </li>
     </ul>
   </div>
