--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -15,6 +15,7 @@ $colors: (
   'socials': #fea5bb,
   'lightBgrd': #fff5f6,
   'secondaryBtnActive': #ecebeb,
+  'arrowColor': #d41442,
 );
 
 @function getColor($key) {
