Revert "Добавляет работающий скрипт для слайдера, фиксит стили"

--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -2,7 +2,7 @@
   <div class="container slider-container">
     <h2 class="section-title slider">Отзывы</h2>
     <ul class="list slider-list">
-      <li class="list-item slider_list-item centered" firts-review>
+      <li class="list-item slider_list-item">
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -10,15 +10,13 @@
           srcset="./images/photo1_2x.png 2x, ./images/photo1_3x.png 3x"
         />
         <p class="slider-text">
-          <span class="span-text">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
-          </span>
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
         </p>
         <p class="slider-address">Emily, Los Angeles</p>
       </li>
-      <li class="list-item slider_list-item right" second-review>
+      <li class="list-item slider_list-item right">
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -26,15 +24,13 @@
           srcset="./images/photo2_2x.png 2x, ./images/photo2_3x.png 3x"
         />
         <p class="slider-text">
-          <span class="span-text">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
-          </span>
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
         </p>
         <p class="slider-address">Jina, Los Angeles</p>
       </li>
-      <li class="list-item slider_list-item right" third-review>
+      <li class="list-item slider_list-item left">
         <img
           class="slider-photo"
           alt="Фото автора отзыва"
@@ -42,11 +38,9 @@
           srcset="./images/photo3_2x.png 2x, ./images/photo3_3x.png 3x"
         />
         <p class="slider-text">
-          <span class="span-text">
-            Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
-            Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
-            ipsum primis in nibh vel risus.
-          </span>
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
         </p>
         <p class="slider-address">Alex, Los Angeles</p>
       </li>
@@ -54,17 +48,13 @@
 
     <ul class="list slider-buttons">
       <li class="list-item slider-buttons_list-item">
-        <button
-          type="button"
-          class="slider-button active"
-          first-button
-        ></button>
+        <button type="button" class="slider-button active"></button>
       </li>
       <li class="list-item slider-buttons_list-item">
-        <button type="button" class="slider-button" second-button></button>
+        <button type="button" class="slider-button"></button>
       </li>
       <li class="list-item slider-buttons_list-item">
-        <button type="button" class="slider-button" third-button></button>
+        <button type="button" class="slider-button"></button>
       </li>
     </ul>
   </div>
