--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -48,14 +48,6 @@
   height: auto;
 
   margin-bottom: 29px;
-
-  @include for-size(tablet) {
-    margin-bottom: 19px;
-  }
-
-  @include for-size(desktop) {
-    margin-bottom: 15px;
-  }
 }
 
 .slider-text {
@@ -67,7 +59,7 @@
 
   text-align: center;
 
-  margin-bottom: 30px;
+  margin-bottom: 52px;
   padding-top: 43px;
   padding-bottom: 26px;
   padding-right: 60px;
@@ -103,7 +95,7 @@
     font-size: 14px;
     line-height: 2.16;
 
-    margin-bottom: 24px;
+    margin-bottom: 42px;
     padding-top: 47px;
     padding-bottom: 34px;
     padding-right: 80px;
@@ -114,7 +106,7 @@
     font-size: 16px;
     line-height: 1.86;
 
-    margin-bottom: 15px;
+    margin-bottom: 34px;
     padding-top: 47px;
     padding-bottom: 39px;
     padding-right: 88px;
@@ -122,15 +114,11 @@
   }
 }
 
-.span-text {
-  border-bottom: 1px solid #e1e1e1;
-}
-
 .slider-buttons {
   display: flex;
   justify-content: center;
 
-  margin-bottom: 170px;
+  padding-bottom: 86px;
 
   &_list-item {
     &:not(:last-child) {
@@ -172,10 +160,6 @@
     background-image: url('/images/icons/group_dots.svg');
 
     margin-bottom: 18px;
-
-    @include for-size(desktop) {
-      margin-bottom: 15px;
-    }
   }
 
   @include for-size(tablet) {
