--- a/src/partials/backdrop.html
+++ b/src/partials/backdrop.html
@@ -1,4 +1,4 @@
-<div class="backdrop is-hidden" data-modal>
+<div class="backdrop open is-hidden" data-modal>
   <div class="modal">
     <button type="button" class="modal-close-button" data-modal-close>
       <svg class="modal-icon">
