--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
 <footer class="footer ">
   <div class="container widget">
   <div class="footer-widget ">
-  <h2 class="footer-title">homemade ice cream made<span class="footer-title-label"> with passion<span></h2>
+  <h2 class="footer-title animate__animated animate__zoomIn">homemade ice cream made<span class="footer-title-label"> with passion<span></h2>
   </div> 
   <div class="footer-contacts ">
     <ul class="footer-list">
