--- a/src/sass/_hero.scss
+++ b/src/sass/_hero.scss
@@ -6,7 +6,7 @@
 
 %btn {
   border-radius: 20px;
-  font-family: "DM Sans";
+  font-family: 'DM Sans';
   font-size: 8px;
   line-height: 10px;
   display: inline-flex;
@@ -111,7 +111,8 @@
 
   @media screen and (min-width: 480px) and (max-width: 767px) {
     background-size: 171px 410px, 346px 344px;
-    background-image: url(../images/mobile/icecreame_hero.png), url(../images/tablet/ellipse_hero.png);
+    background-image: url(../images/mobile/icecreame_hero.png),
+      url(../images/tablet/ellipse_hero.png);
     background-repeat: no-repeat;
     background-position: 90% 100%, 130% 45%;
   }
@@ -121,7 +122,8 @@
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
     .hero-container {
-      background-image: url(../images/mobile/icecreame_hero@x2.png), url(../images/mobile/ellipse_hero@x2.png);
+      background-image: url(../images/mobile/icecreame_hero@x2.png),
+        url(../images/mobile/ellipse_hero@x2.png);
     }
   }
 
@@ -140,8 +142,10 @@
       screen and (min-resolution: 192dpi),
       screen and (min-resolution: 2dppx) {
       .hero-container {
-        background-image: url(../images/tablet/hero-girl@x2.png), url(../images/tablet/icecreame_hero@x2.png),
-          url(../images/tablet/ellipse_hero@x2.png), url(../images/tablet/bidon-moloka@x2.png);
+        background-image: url(../images/tablet/hero-girl@x2.png),
+          url(../images/tablet/icecreame_hero@x2.png),
+          url(../images/tablet/ellipse_hero@x2.png),
+          url(../images/tablet/bidon-moloka@x2.png);
       }
     }
   }
@@ -172,7 +176,8 @@
   @media screen and (min-width: 1200px) {
     min-width: 1200px;
     margin: 0 auto;
-    background-size: /* 293px 232px, */ /*  236px 557px, 538px 538px, */ 188px 191px;
+    background-size: /* 293px 232px, */ /*  236px 557px, 538px 538px, */ 188px
+      191px;
     background-image: /* url(../images/hero-girl.png), */
       /*  url(../images/icecreame_hero.png), url(../images/ellipse_hero.png), */ url(../images/bidon-moloka.png);
     background-repeat: no-repeat, no-repeat, no-repeat, no-repeat;
@@ -215,7 +220,7 @@
 
 .hero-title-text {
   display: inline-block;
-  font-family: "Titan One";
+  font-family: 'Titan One';
   font-style: 400;
   font-weight: normal;
   font-size: 26px;
@@ -276,7 +281,7 @@
     width: 124px;
     height: 48px;
 
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-size: 8px;
     line-height: 1.5;
   }
@@ -349,7 +354,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -368,7 +373,7 @@
   @media screen and (min-width: 768px) {
     position: relative;
     display: block;
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-size: 28px;
     line-height: 1.1429;
     text-align: right;
@@ -388,7 +393,7 @@
   @media screen and (min-width: 768px) {
     display: block;
     text-transform: lowercase;
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-size: 8px;
     line-height: 1.25;
     text-align: right;
@@ -400,11 +405,16 @@
   }
 }
 
+.arrow-icon {
+  margin-left: 15px;
+  fill: $accent-color;
+}
+
 .dot {
   display: none;
 
   @media screen and (min-width: 768px) {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 0;
@@ -419,7 +429,7 @@
   }
 
   @media screen and (min-width: 1200px) {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     top: 0;
@@ -495,7 +505,7 @@
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: block;
-    content: "";
+    content: '';
     position: absolute;
 
     left: 80px;
@@ -518,7 +528,7 @@
   }
   @media screen and (min-width: 1200px) {
     display: block;
-    content: "";
+    content: '';
     position: absolute;
 
     left: -106px;
