--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -3,7 +3,7 @@
   <div class="container hero-container">
     <!--Hero title-->
     <div class="hero-title-container">
-      <h1 class="hero-title-text">
+      <h1 class="hero-title-text animate__animated animate__zoomIn">
         ice cream
         made with
         <span>passion</span>
@@ -22,7 +22,10 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et</p>
       <button class="hero-arrow ">
         <!--arrow-->
-        &rarr;
+        <!-- &rarr; -->
+        <svg class="arrow-icon">
+          <use href="./images/svg/sprite.svg#icon-button_arrow"></use>
+        </svg>
       </button>
     </div>
 
@@ -66,13 +69,13 @@
     <!--Numbers on the top right side-->
     <div class=" hero-count">
       <ul>
-        <li class="hero-count-text">
+        <li class="hero-count-text animate__animated animate__zoomIn">
           <div class="dot"></div>
           <span class="hero-number">16</span>
           <p class="hero-count-desc">cafes</p>
         </li>
 
-        <li class="hero-count-text">
+        <li class="hero-count-text animate__animated animate__zoomIn">
           <div class="dot"></div>
           <span class="hero-number">23</span>
 
