--- a/src/partials/how-its-made.html
+++ b/src/partials/how-its-made.html
@@ -1,7 +1,7 @@
-<section class="how-its-made">
+<section class="how-its-made" id="how-its-made">
   <div class="container">
-    <p class="him-title">tradition and love</p>
-    <h2 class="him-subtitle">how it’s made?</h2>
+    <p class="him-title animate__animated animate__zoomIn" >tradition and love</p>
+    <h2 class="him-subtitle animate__animated animate__zoomIn">how it’s made?</h2>
     <div class="cont-box">
       <div class="him-box">
         <picture>
