--- a/src/sass/_slider.scss
+++ b/src/sass/_slider.scss
@@ -1,4 +1,5 @@
 .slider {
+  padding-top: 100px;
   margin-left: auto;
   margin-right: auto;
   padding-bottom: 170px;
@@ -7,11 +8,13 @@
   color: #000000;
 
   @media screen and (min-width: 1200px) {
+    padding-top: 350px;
     max-width: 926px;
     min-height: 350px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
+    padding-top: 200px;
     max-width: 620px;
     min-height: 382px;
   }
