Модальное окно в хедере

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -45,10 +45,10 @@
             </li>
           </ul>
         </div>
-        <div class="backdrop is-hidden" data-modal>
-          <div class="modal">
-            <button class="btn_close" data-modal-close>X</button>
-            <p class="message">in this window you can buy now</p>
+        <div class="header-backdrop is-hidden" data-modal>
+          <div class="header-modal">
+            <button class="header-btn_close" data-modal-close>X</button>
+            <p class="haeder-message">in this window you can buy now</p>
           </div>
         </div>
       </div>
