fix button in mobile-menu

--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -199,8 +199,6 @@
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     padding-top: 60px;
-    padding-left: 24px;
-    padding-right: 24px;
   }
 
   &-close {
@@ -253,6 +251,9 @@
 
     stroke: $button-bg-2;
   }
+  & .btn.header-btn {
+    width: 186px;
+  }
 }
 
 .site-nav {
@@ -260,9 +261,6 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-
-    margin-left: -24px;
-    margin-right: -24px;
 
     border-top: 1px solid #e18298;
   }
