--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -252,7 +252,11 @@
     stroke: $button-bg-2;
   }
   & .btn.header-btn {
-    width: 186px;
+    width: 209px;
+
+    @media screen and (min-width: 768px) {
+      width: 186px;
+    }
   }
 }
 
