--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,7 +1,7 @@
 <section class="products">
   <div class="container container-products">
-    <p class="products-slogan">100% natural<pз>
-        <h2 class="products-title">Products</h2>
+    <p class="products-slogan">100% natural</p>
+        <h2 class="products-title" id="our-product">Products</h2>
 
         <ul class="list products-list">
           <li class="products-gallery products-one">
@@ -22,9 +22,7 @@
             <p class="products-gallery-text-short ">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do eiusmod
               tempor incididunt ut labore et.</p>
-            <a class="products-link" href="http://ice-cream" target="_blank" rel="ice cream" aria-label="ice cream">
-
-            </a>
+            <a class="products-link" href="http://ice-cream" target="_blank" rel="ice cream" aria-label="ice cream"></a>
 
             <picture class="products-foto products-foto-first">
               <source srcset="
@@ -57,14 +55,15 @@
               <div class="products-circle">
               </div>
             </div>
-            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod
               tempor incididunt ut labore et. dolore magna
               aliqua facilisis.</p>
-            <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <p class="products-gallery-text-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do
               eiusmod
               tempor incididunt ut labore et.</p>
+            <a class="products-link" href="http://icecoffee" target="_blank" rel="ice coffee" aria-label="ice coffee"></a>
             <picture class="products-foto products-foto-second">
               <source srcset="
                     ./images/products/mobile/product-2.png 1x,
@@ -96,14 +95,15 @@
               <div class="products-circle">
               </div>
             </div>
-            <p class="products-gallery-text arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            <p class="products-gallery-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod
               tempor incididunt ut labore et. dolore magna
               aliqua facilisis.</p>
-            <p class="products-gallery-text-short arrow-right">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+            <p class="products-gallery-text-short">Lorem ipsum dolor sit amet, consectetur adipiscing elit,
               sed do
               eiusmod
               tempor incididunt ut labore et.</p>
+            <a class="products-link" href="http://milkshakes" target="_blank" rel="milkshakes" aria-label="milkshakes"></a>
             <picture class="products-foto products-foto-third">
               <source srcset="
                          ./images/products/mobile/product-3.png 1x,
