исправлены картинки и фон секции recipe

--- a/src/partials/recipe.html
+++ b/src/partials/recipe.html
@@ -3,7 +3,7 @@
     <p class="recipe_under-h">tradition and love</p>
     <h2 class="recipe_title" id="recipe">how it’s made?</h2>
     <div class="recipe_card">
-      <picture>
+      <picture class="recipe_card-item">
         <source
           srcset="./images/bitmap/how-its-made/cow-milk/mob@1x.png 1x, ./images/bitmap/how-its-made/cow-milk/mob@2x.png 2x"
           media="(max-width:739px)">
@@ -19,11 +19,11 @@
         <img class="recipe_cow" src="./images/bitmap/how-its-made/cow-milk/mob@1x.png" alt="cow">
       </picture>
 
-      <div class="recipe_all-text">
+      <div class="recipe_all-text recipe_card-item">
         <p class="recipe_bold-text">Fusce ut velit laoreet, tempus arcu eu, molestie tortor. Nam vel justo cursus,
           faucibus lorem eget, egestas eros.
           Maecenas eleifend erat at justo fringilla.</p>
-        <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque odio elementum. Mauris rhoncus
+        <p class="recipe_text">Curabitur lacinia enim at ex blandit, vel pellentesque  odio  elementum.  Mauris  rhoncus
           orci in imperdiet placerat.
           Vestibulum euismod nisl suscipit ligula volutpat, a feugiat urna maximus. Cras massa nibh, tincidunt.
           <br>
