--- a/src/sass/layouts/_recipe.scss
+++ b/src/sass/layouts/_recipe.scss
@@ -1,8 +1,8 @@
 .recipe {
   @media screen and (max-width: 739px) {
     background-image: url('../images/bitmap/how-its-made/milk-splash/mob-bcg@1x.png');
-    background-size: 320px 133px;
-    background-position: 0 766px;
+    background-size: 100%;
+    background-position: left 0px bottom 55px;
     background-repeat: no-repeat;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -15,7 +15,7 @@
   @media screen and (min-width: $desktop) {
     background-size: 1280px 534px;
     background-image: url('../images/bitmap/how-its-made/milk-splash/desk-bcg@1x.png');
-    background-position: 0 342px;
+    background-position: 0 360px;
     background-repeat: no-repeat;
     @media screen and (min-device-pixel-ratio: 2),
       screen and (min-resolution: 192dpi),
@@ -72,13 +72,7 @@
   min-width: 280px;
   margin-bottom: 46px;
   @media screen and (min-width: $tablet) {
-    min-width: 340px;
-    margin-right: 17px;
-  }
-  @media screen and (min-width: $desktop) {
-    min-width: 516px;
-    margin-right: 74px;
-    margin-bottom: 0;
+    margin: 0;
   }
 }
 .recipe_all-text {
@@ -86,7 +80,10 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    // align-items: spase-between;
+
+    @media screen and (min-width: $desktop) {
+      max-width: 463px;
+    }
   }
 }
 .recipe_bold-text {
@@ -103,9 +100,11 @@
     font-size: 14px;
     padding: 0;
     margin-bottom: 35px;
+    line-height: 1.76;
   }
   @media screen and (min-width: $desktop) {
     font-size: 16px;
+    letter-spacing: 0.04em;
   }
 }
 .recipe_text {
@@ -121,6 +120,11 @@
     font-size: 14px;
     padding: 0;
     margin: 0;
+    line-height: 1.76;
+    letter-spacing: 0.04em;
+  }
+  @media screen and (min-width: $desktop) {
+    line-height: 1.94;
   }
 }
 .recipe-button {
@@ -166,13 +170,25 @@
 .recipe_card {
   @media screen and (min-width: $tablet) {
     display: flex;
-    align-items: flex-end;
-    padding-left: 20px;
-    padding-right: 20px;
+    justify-content: space-evenly;
+    align-items: center;
   }
   @media screen and (min-width: $desktop) {
-    padding-left: 92px;
-    padding-right: 97px;
     align-items: center;
+    justify-content: center;
+  }
+}
+.recipe_card-item {
+  @media screen and (min-width: $tablet) {
+    flex-basis: calc(100% / 2 - 9px);
+    & + & {
+      margin-left: 17px;
+    }
+  }
+  @media screen and (min-width: $desktop) {
+    flex-basis: calc(100% / 2 - 27px);
+    & + & {
+      margin-left: 0;
+    }
   }
 }
