--- a/src/partials/galery.html
+++ b/src/partials/galery.html
@@ -3,44 +3,44 @@
     <ul class="galery-list">
       <li class="galery-item">
         <div class="galery-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic1.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic1.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
       <li class="galery-item">
         <div class="galery-img top-img galery-img-container ">
-          <img class="galery-img" src="./images/galery/pic2.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic2.jpg" alt="Dont worry be happy" width="259">
         </div>
         <div class="galery-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic3.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic3.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
       <li class="galery-item big-img">
         <div class="galery-img top-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic4.jpg" alt="" width="518">
+          <img class="galery-img" src="./images/galery/pic4.jpg" alt="Dont worry be happy" width="518">
         </div>
         <div class="galery-img galery-img-container girl">
-          <img class="galery-img" src="./images/galery/pic5.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic5.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
       <li class="galery-item">
         <div class="galery-img top-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic6.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic6.jpg" alt="Dont worry be happy" width="259">
         </div>
         <div class="galery-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic7.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic7.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
       <li class="galery-item">
         <div class="galery-img top-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic8.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic8.jpg" alt="Dont worry be happy" width="259">
         </div>
         <div class="galery-img galery-img-container">
-          <img class="galery-img" src="./images/galery/pic9.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic9.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
       <li class="galery-item galery-img-container">
         <div class="galery-img">
-          <img class="galery-img" src="./images/galery/pic10.jpg" alt="" width="259">
+          <img class="galery-img" src="./images/galery/pic10.jpg" alt="Dont worry be happy" width="259">
         </div>
       </li>
     </ul>
