--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
   <div class="header container">
     <!-- Логотип -->
     <a class="logo" href="./index.html">
-      <img class="logo-icon" src="./images/svg/logo 1.svg" alt="" />
+      <img class="logo-icon" src="./images/svg/logo 1.svg" alt="Dont worry be happy" />
       <!-- <svg class="logo-icon">
         <use href="./images/svg/sprite.svg#logo"></use>
       </svg> -->
@@ -38,7 +38,7 @@
             <a class="menu-link current" href="./index.html">Home</a>
           </li>
           <li class="menu-item">
-            <a class="menu-link" href="#products">About us</a>
+            <a class="menu-link" href="#slider-section">About us</a>
           </li>
           <li class="menu-item">
             <a class="menu-link" href="#how-its-made">How it’s made?</a>
