заменены фото в галерее, добавлены картинки webp, отцентрован текст для моб версии в секции features

--- a/src/sass/layouts/_section-features.scss
+++ b/src/sass/layouts/_section-features.scss
@@ -2,10 +2,12 @@
   padding-top: 20px;
   padding-bottom: 145px;
   background-color: $background-made-footer-locations;
+  text-align: center;
 
   @include for-size(tablet) {
     padding-top: 33px;
     padding-bottom: 242px;
+    text-align: left;
   }
 
   @include for-size(desktop) {
@@ -14,7 +16,15 @@
   }
 }
 
+.features-img {
+  margin-left: auto;
+  margin-right: auto;
 
+  @include for-size(tablet) {
+    margin-left: 0;
+    margin-right: 0;
+  }
+}
 
 .features-item {
   text-align: left;
@@ -26,9 +36,11 @@
   color: $accent-color;
   margin-top: 16px;
   margin-bottom: 13px;
+  text-align: center;
 
   @include for-size(tablet) {
     margin-top: 36px;
+    text-align: left;
   }
 
   @include for-size(desktop) {
