--- a/src/sass/layouts/_section-pictures.scss
+++ b/src/sass/layouts/_section-pictures.scss
@@ -38,6 +38,7 @@
   &:hover,
   &:focus {
     transform: scale(1.5);
+    box-shadow: 1px 2px 10px -1px $menu-color;
   }
 }
 
@@ -58,6 +59,7 @@
   &:hover,
   &:focus {
     transform: scale(1.25);
+    box-shadow: 1px 2px 10px -1px $menu-color;
   }
 }
 
