--- a/src/sass/components/_outlets.scss
+++ b/src/sass/components/_outlets.scss
@@ -16,10 +16,10 @@
       background-repeat: no-repeat;
 
       @media screen and (min-device-pixel-ratio: 2),
-      screen and (-webkit-min-device-pixel-ratio: 2),
-      screen and (-o-min-device-pixel-ratio: 2/1),
-      screen and (min-resolution: 192dpi),
-      screen and (min-resolution: 2dppx) {
+        screen and (-webkit-min-device-pixel-ratio: 2),
+        screen and (-o-min-device-pixel-ratio: 2/1),
+        screen and (min-resolution: 192dpi),
+        screen and (min-resolution: 2dppx) {
         background-image: url(../images/3-desktop/outlets-bg@2x.png);
       }
     }
@@ -30,7 +30,7 @@
   position: absolute;
   left: 50px;
   right: 50px;
-  top: -78px;
+  top: -84px;
 
   @media screen and (min-width: 768px) {
     display: flex;
@@ -44,13 +44,15 @@
 
 .outlets-item {
   width: 100%;
-  height: 427px;
-  margin-bottom: 20px;
+  height: auto;
+
   padding: 43px 20px;
   background: $third-text-color;
   box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
   border-radius: 24px;
-
+  &:not(:last-child) {
+    margin-bottom: 20px;
+  }
   @media screen and (min-width: 768px) and (max-width: 1279px) {
     display: block;
     margin-bottom: 0;
@@ -68,7 +70,7 @@
 
   @media screen and (min-width: 1280px) {
     max-width: 330px;
-    min-height: 572px;
+    height: auto;
     padding: 51px 44px 62px 43px;
     margin-bottom: 0;
   }
@@ -86,7 +88,7 @@
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
-  line-height: 1.86;
+  line-height: 1.875;
   text-align: center;
   letter-spacing: 0.04em;
 
@@ -134,7 +136,7 @@
   }
 }
 .outlets-title {
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   font-family: DM Sans;
   font-weight: 500;
   font-size: 12px;
@@ -255,5 +257,11 @@
   @media screen and (min-width: 1280px) {
     font-size: 16px;
     line-height: 1.8;
+  }
+}
+.outlets-time-item:first-child {
+  margin-bottom: 10px;
+  @media screen and(min-width:768px) {
+    margin-bottom: 15px;
   }
 }
