--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -15,9 +15,10 @@
                         <li class="item"> <a href="" class="link nav-link"> Contacts</a> </li>
                     </ul>
                     <div class="tablet-menu">
-                        <button type="button" class="menu-button-open" data-modal-open>
+                        <button type="button" class="menu-button" data-menu-button>
                             <svg width="40" height="40">
-                                <use class="icon-menu" xlink:href="./images/sprite.svg#icon-menu40px"></use>
+                                <use class="icon-menu-open" xlink:href="./images/sprite.svg#icon-menu40px"></use>
+                                <use class="icon-menu-close" xlink:href="./images/sprite.svg#icon-close40px"></use>
                             </svg>
                         </button>
                         <button type="button" class="btn-header">
