Исправил позиционирование коровки

--- a/src/sass/layouts/_recipe.scss
+++ b/src/sass/layouts/_recipe.scss
@@ -69,9 +69,10 @@
   }
 }
 .recipe_cow {
-  min-width: 280px;
   margin-bottom: 46px;
-  @media screen and (min-width: $tablet) {
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
+    position: relative;
+    top: -80px;
     margin: 0;
   }
 }
