--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -51,7 +51,7 @@
     </div>
 
     <!--Icecream girl-->
-    <div class="hero-girl-container">
+    <div class="hero-girl-container animate__animated animate__bounceInUp">
       <picture class="hero-girl">
 
         <source srcset="./images/hero-girl.png 1x, 
