Добавил паддинг от верхней секции

--- a/src/sass/layouts/_section-slider.scss
+++ b/src/sass/layouts/_section-slider.scss
@@ -1,3 +1,14 @@
+.slider-container {
+  padding-top: 80px;
+
+  @include for-size(tablet) {
+    padding-top: 121px;
+  }
+  @include for-size(desktop) {
+    padding-top: 123px;
+  }
+}
+
 .section-title.slider {
   display: none;
 }
