--- a/src/partials/shops.html
+++ b/src/partials/shops.html
@@ -42,12 +42,12 @@
       </li>
     </ul>
     <div class="shops-btn-container">
-      <button type="button" class="shops-btn btn-loc">
+      <a target="_blank" rel="noopener noreferrer" href="https://www.google.com.ua/maps/place/GoIT/@50.4265747,30.5364694,17z/data=!4m5!3m4!1s0x40d4d96f5139689b:0xa1f7c65300bebad1!8m2!3d50.4265807!4d30.5383858?hl=ru&authuser=0" class="shops-btn btn-loc">
         Our Locations
         <svg class="shops-icon-white shops-icon" width="10" height="10">
           <use href="./images/svg/sprite.svg#icon-button_arrow"></use>
         </svg>
-      </button>
+      </a>
       <button type="button" class="shops-btn btn-frachise">
         Franchise
         <svg class="shops-icon" width="10" height="10">
