Пофиксил позиционирование секции

--- a/src/sass/layouts/_section-products.scss
+++ b/src/sass/layouts/_section-products.scss
@@ -12,8 +12,8 @@
     }
     .container{
         @include from (desktop) {
-             padding-right: 114px;
-            padding-left: 114px;
+            //  padding-right: 114px;
+            // padding-left: 114px;
             padding-right: 71px;
             padding-left: 71px;
         }
